# saws-saudi

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile.frontend  GEMINI.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  middleware.py
backend/app/api/v1/: __init__.py  alerts.py  analytics.py  districts.py  fields.py  satellite.py  weather.py  websocket.py
backend/app/db/: base.py
backend/app/models/: __init__.py  alert.py  field.py  satellite.py  weather.py
backend/app/schemas/: __init__.py  alert.py  analytics.py  district.py  field.py  satellite.py  weather.py
backend/app/services/: __init__.py  anomaly_detection.py  evapotranspiration.py
backend/app/services/alert/: __init__.py  generator.py  notifier.py
backend/app/services/drought/: __init__.py  classifier.py  spei.py
backend/app/services/satellite/: __init__.py  gee.py  indices.py
backend/app/services/weather/: __init__.py  pme.py
backend/app/tasks/: __init__.py  alert_generation.py  drought_monitor.py  index_calculation.py  satellite_fetch.py  weather_fetch.py
backend/app/utils/: logging.py
backend/requirements/: base.txt  dev.txt  geospatial.txt  ml.txt
backend/scripts/: init_db.py  seed_data.py
docs/: SCIENTIFIC_IMPROVEMENTS.md
src/: App.tsx
src/data/: mockData.ts
src/hooks/: index.ts  useAlerts.ts  useAnalytics.ts  useFields.ts  useSatellite.ts  useWeather.ts
src/sections/: AlertsPanel.tsx
src/services/: alerts.ts  api.ts  fields.ts  index.ts  satellite.ts  weather.ts  websocket.ts
src/types/: index.ts
